Fix comments getting cut off in firefox
Firefox ignores padding on elements with
overflow:auto, and so the padding to prevent
comments from getting cut off was not getting
applied.

Wrap everything inside cp-sidebar with a div
that uses padding-bottom.

http://stackoverflow.com/questions/13471910/css-applying
-padding-to-box-with-scroll-bottom-padding-doesnt-work

--- a/website/static/css/commentpane.css
+++ b/website/static/css/commentpane.css
@@ -69,13 +69,20 @@
 }
 
 .cp-sidebar {
-    height: 98%;
+    height: 95%;
     margin-left: 1px;  /* Note: Should be the same as .cp-bar:width */
     background-color: whitesmoke;
     padding: 10px;
-    padding-bottom: 70px;
     overflow-y: auto;
     box-shadow: -1px 0 3px lightgrey;
+}
+
+/*
+* Note: Separate class needed because padding does not get applied to overflow elements in firefox:
+* http://stackoverflow.com/questions/13471910/css-applying-padding-to-box-with-scroll-bottom-padding-doesnt-work
+*/
+.cp-sidebar-content {
+    padding-bottom: 70px!important;
 }
 
 .unselectable {
